[package]
name = "rsx-stylesheet"
version = "0.1.0"
authors = ["Victor Porof <victor.porof@gmail.com>"]

[lib]
name = "rsx_stylesheet"

[features]
default = ["css-parse"]
css-parse = ["servo-css-parser"]

log-unused = []

[dependencies]
enum-str-derive = { git = "https://github.com/victorporof/rust-enum-str-derive.git" }
quote = "0.3.15"
rsx-shared = { git = "https://github.com/victorporof/rsx-shared.git", default-features = false, features = ["impl-external-yoga"] }
self-tokenize-macro = { git = "https://github.com/victorporof/rust-self-tokenize.git" }
self-tokenize-trait = { git = "https://github.com/victorporof/rust-self-tokenize.git" }
serde = "1.0.27"
serde_derive = "1.0.27"
smallvec = { version = "0.6.0", features = ["serde"] }
yoga = { git = "https://github.com/victorporof/yoga-rs.git", branch = "self-tokenize", features = ["serde_support"] }

# Optional
servo-css-parser = { git = "https://github.com/victorporof/servo-css-parser.git", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.10"
syn = { version = "0.11.11", features = ["full"] }
